--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,13 @@
 
     <div ng-include="'js/app.html?cache-bust=' + cachebust"> </div>
 
+    <script src="js/vendor/angular.min.js"></script>
+    <script src="js/vendor/underscore.min.js"></script>
+    <script src="js/community/controller.js"></script> 
+    <script src="js/chat/controller.js"></script> 
+    <script src="js/learn/controller.js"></script> 
+    <script src="js/profile/controller.js"></script> 
+    <script src="js/api.js"></script> 
     <script src="js/app.js"></script> 
   </body>
 </html>
