--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,7 @@
 
     <!--<script src="js/vendor/angular.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js"></script>
+    <script src="js/vendor/router.min.js"></script>
     <script src="js/vendor/underscore.min.js"></script>
     <script src="js/community/controller.js"></script> 
     <script src="js/chat/controller.js"></script> 
