--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
 
   <body ng-app="plus">
 
-    <div ui-view></div
+    <div ui-view></div>
 
     <div ng-include="'js/app.html?cache-bust=' + cachebust"> </div>
 
