--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js"></script>
     <script src="js/vendor/underscore.min.js"></script>
     <script src="js/community/controller.js"></script> 
+    <script src="js/community/service.js"></script> 
     <script src="js/chat/controller.js"></script> 
     <script src="js/learn/controller.js"></script> 
     <script src="js/profile/controller.js"></script> 
