add material icons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,8 @@
     <title>Helme</title>
     <meta name="description" content="Plus!">
 
+    <link rel="stylesheet" href="style/vendor/material.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="style/css/main.css">
   </head>
 
