--- a/frontend/js/profile/profile.html
+++ b/frontend/js/profile/profile.html
@@ -1,41 +1,88 @@
 <div class="profile">
     <p class="header">Basic Information</p>
-    <div class="basic">
-        <div class="mdl-textfield mdl-js-textfield">
-            <input class="mdl-textfield__input" type="text" id="name"/>
-            <label class="mdl-textfield__label" for="name">Name</label>
-        </div>
+    <div class="basic box">
+        <input class="mdl-textfield__input" type="text" id="name"/>
     </div>
 
     <p class="header">Location</p>
-    <div class="locatio">
-        <div class="mdl-textfield mdl-js-textfield">
-            <input class="mdl-textfield__input" type="text" id="location"/>
-            <label class="mdl-textfield__label" for="location">Location</label>
-        </div>
+    <div class="location box">
+        <input class="mdl-textfield__input" type="text" id="location"/>
+    </div>
 
-    <p class="header">Bio</p>
+    <p class="header box">Bio</p>
     <div class="bio">
-        <div class="mdl-textfield mdl-js-textfield">
-            <textarea class="mdl-textfield__input" type="text" id="bio"></textarea>
-            <label class="mdl-textfield__label" for="bio">About You!</label>
-        </div>
+        <textarea class="mdl-textfield__input" type="text" id="bio"></textarea>
     </div>
 
     <p class="header">Health Status</p>
-    <div class="status">
-        <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+    <div class="status box">
+        <table class="mdl-data-table mdl-table-table--selectable mdl-shadow--2dp">
             <thead>
                 <tr>
-                    <th></th>
+                    <th>Select</th>
+                    <th>State</th>
                 </tr>
             </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <input type="radio" name="status" value="none" checked/>
+                    </td>
+                    <td>Prefer Not to Disclose</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="radio" name="status" value="negative"/>
+                    </td>
+                    <td>HIV Negative</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="radio" name="status" value="positive"/>
+                    </td>
+                    <td>HIV Positive</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="radio" name="status" value="aids"/>
+                    </td>
+                    <td>AIDS</td>
+                </tr>
+            </tbody>
         </table>
     </div>
 
     <p class="header">Privacy</p>
     <div class="privacy">
         
+        <table class="mdl-data-table mdl-table-table--selectable mdl-shadow--2dp">
+            <thead>
+                <tr>
+                    <th>Select</th>
+                    <th>State</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <input type="radio" name="privacy" value="none" checked/>
+                    </td>
+                    <td>Anonymous to All Users</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="radio" name="privacy" value="positive"/>
+                    </td>
+                    <td>Known to HIV Positive Users</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="radio" name="privacy" value="all"/>
+                    </td>
+                    <td>Known to all Users</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
     <hr/>
