frontend/js/login/login.html

--- a/frontend/js/login/login.html
+++ b/frontend/js/login/login.html
@@ -1,1 +1,20 @@
-<h1>Login time</h1>
+<div class="login">
+    <p class="header">Username</p>
+    <div class="username mdl-textfield">
+        <input name="username" type="text"
+               ng-model="username"
+               class="mdl-textfield"/>
+    </div>
+
+    <p class="header">Password</p>
+    <div class="password">
+    <div class="username mdl-textfield">
+        <input name="password" type="text"
+               ng-model="password"
+               class="mdl-textfield"/>
+    </div>
+
+    <div class="submit-button">
+        <>
+    </div>
+</div>
