--- a/frontend/js/login/login.html
+++ b/frontend/js/login/login.html
@@ -15,6 +15,8 @@
     </div>
 
     <div class="submit-button">
-        <>
+        <button class="mdl-button mdl-button--raised mdl-button--accent">
+            Register
+        </button>
     </div>
 </div>
