--- a/frontend/js/login/login.html
+++ b/frontend/js/login/login.html
@@ -16,7 +16,7 @@
 
     <div class="submit-button">
         <button class="mdl-button mdl-button--raised mdl-button--accent">
-            Register
+            Login
         </button>
     </div>
 </div>
