--- a/frontend/js/login/login.html
+++ b/frontend/js/login/login.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="submit-button">
-        <button class="mdl-button mdl-button--raised mdl-button--accent">
+        <button class="mdl-button mdl-button--raised mdl-button--accent" ng-click="login()">
             Login
         </button>
     </div>
