--- a/frontend/js/register/register.html
+++ b/frontend/js/register/register.html
@@ -1,1 +1,34 @@
-<h1>registration time</h1>
+<div class="login">
+    <p class="header">Username</p>
+    <div class="username mdl-textfield">
+        <input name="username" type="text"
+               ng-model="username"
+               class="mdl-textfield"/>
+    </div>
+
+    <p class="header">Password</p>
+    <div class="password mdl-textfield">
+        <input name="password" type="password"
+               ng-model="password"
+               class="mdl-textfield"/>
+    </div>
+
+    <p class="header">Phone Number</p>
+    <div class="number mdl-textfield">
+        <input name="number" type="text"
+               ng-model="number"
+               class="mdl-textfield"/>
+    </div>
+
+    <p class="header">Health Status</p>
+    <div class="number mdl-textfield">
+      <select>
+        </select>
+    </div>
+
+    <div class="submit-button">
+        <button class="mdl-button mdl-button--raised mdl-button--accent" ng-click="login()">
+            Login
+        </button>
+    </div>
+</div>
