--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,6 +55,7 @@
     <script src="js/chat/controller.js"></script> 
     <script src="js/learn/controller.js"></script> 
     <script src="js/profile/controller.js"></script> 
+    <script src="js/vendor/ui-bootstrap-custom-tpls-0.14.2.min.js"></script> 
     <script src="js/api.js"></script> 
     <script src="js/app.js"></script> 
     <script src="//localhost:35729/livereload.js"></script>
