frontend/js/login/login.html

--- a/frontend/js/login/login.html
+++ b/frontend/js/login/login.html
@@ -9,7 +9,7 @@
     <p class="header">Password</p>
     <div class="password">
     <div class="username mdl-textfield">
-        <input name="password" type="text"
+        <input name="password" type="password"
                ng-model="password"
                class="mdl-textfield"/>
     </div>
