Add register and login buttons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,17 @@
         <div class="mdl-layout__header-row">
           <!-- Title -->
           <span class="mdl-layout-title">Plus!</span>
+          <div class="mdl-layout-spacer"></div>
+          <span class="mdl-layout-title">
+            <a class="mdl-button"
+                  href="#/login">
+              Log in
+            </a>
+            <a class="mdl-button"
+                  href="#/register">
+              Register
+            </a>
+          </span>
         </div>
         <!-- Tabs -->
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
