--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,6 +49,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js"></script>
     <script src="js/vendor/router.min.js"></script>
     <script src="js/vendor/underscore.min.js"></script>
+    <script src="js/vendor/firebase.js"></script>
+    <script src="js/vendor/angularfire.min.js"></script>
     <script src="js/community/controller.js"></script> 
     <script src="js/community/service.js"></script> 
     <script src="js/header/controller.js"></script> 
