--- a/frontend/test/info_pg.html
+++ b/frontend/test/info_pg.html
@@ -28,6 +28,12 @@
     float: none;
     margin: 0 auto;
 }
+.element {
+	background-color: darkgrey;
+	padding: 10px;
+	border-radius: 10px;
+	margin-top: 15px;
+}
 </style>
 
 <div class="container sections-wrapper">
@@ -36,62 +42,85 @@
   <h1>Learn About HIV</h1>           
 </div>
 
-<div class="content-center section-inner"> 
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered"> 
 <a href="#1st" class="btn btn-info" data-toggle="collapse">What is HIV?</a>
-</div>
-
-<div id="1st" class="collapse content-center section-inner">
+<div id="1st" class="collapse content-center section-inner element">
     HIV is short for "human inmmunodeficiency virus.
 </div>
+</div>
+</div>
+</div>
 
 <br></br>
 
-<div class="content-center"> 
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">  
 <a href="#2nd" class="btn btn-info" data-toggle="collapse">How do you get HIV?</a>
 </div>
-
-<div id="2nd" class="collapse content-center">
+<div id="2nd" class="collapse content-center element">
     You can get HIV through unprotected sex or by sharing needles or other equipment used to inject drugs.
+</div>
+</div>
 </div>
 
 <br></br>
 
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
 <div class="col-centered"> 
 <a href="#3rd" class="btn btn-info" data-toggle="collapse">Who gets HIV?</a>
 
-<div id="3rd" class="col-centered">
+<div id="3rd" class="collapse content-center section-inner element">
     Anybody can get HIV. HIV is a virus; once it gets into your body, it can make you sick. 
 	It does so if you are rich or poor; 14 years old or 70; black or white; gay or straight; married or single. 
 	It's what you do, not who you are, that puts you at risk for HIV.
 </div>
 </div>
+</div>
+</div>
 
 <br></br>
 
-<div class="content-center"> 
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered"> 
 <a href="#4th" class="btn btn-info" data-toggle="collapse">How Long Does It Take to Feel a Symptom of HIV?</a>
 </div>
 
-<div id="4th" class="collapse content-center">
+<div id="4th" class="collapse content-center element">
     People can have HIV for 10 years or more and never show any symptoms. Other people can get symptoms within a 
 	short time after being infected. The only way you can tell if you have HIV is to get an HIV test.
+</div>
+</div>
 </div>
 
 <br></br>
 
-<a href="#5th" class="btn btn-default" data-toggle="collapse">How Long Will I Live With HIV?</a>
-<div id="5th" class="collapse">
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">
+<a href="#5th" class="btn btn-info" data-toggle="collapse">How Long Will I Live With HIV?</a>
+<div id="5th" class="collapse content-center element">
     If you keep your CD4 (type of white blood cell) count up, keep your viral load down, take your HIV meds properly 
 	and live a healthy life, there's no reason to think that your life will be any shorter with HIV than it would have 
 	been without it. The latest information on life expectancy for HIVers shows that HIV-positive people who are on 
 	treatment can expect to live well into their 60s and beyond -- and the estimates keep getting closer to those of 
 	HIV-negative people as HIV meds become more and more effective.
 </div>
+</div>
+</div>
+</div>
 
 <br></br>
 
-<a href="#6th" class="btn btn-default" data-toggle="collapse">What Should a Person Do After They Test Positive?</a>
-<div id="6th" class="collapse">
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">
+<a href="#6th" class="btn btn-info" data-toggle="collapse">What Should a Person Do After They Test Positive?</a>
+<div id="6th" class="collapse content-center element">
     If you've already tested positive for HIV, then there are tests a doctor can do to see whether your HIV is progressing, 
 	and whether it's wise to start taking HIV medications.
 
@@ -102,20 +131,32 @@
 	If you're newly diagnosed, it can also be incredibly beneficial if you seek out support, get help from your local HIV 
 	organization and connect with other HIV-positive people.
 </div>
-
-<br></br>
-
-<a href="#7th" class="btn btn-default" data-toggle="collapse">What is HIV Testing?</a>
-<div id="7th" class="collapse">
-    HIV testing tells you if you are infected with the Human Immunodeficiency Virus (HIV) that causes AIDS. Most of 
-	these tests look for "antibodies" to HIV. Antibodies are proteins produced by the immune system to fight a specific 
-	germ. Newer HIV tests can also look for signs of the virus itself in the blood.
+</div>
+</div>
 </div>
 
 <br></br>
 
-<a href="#8th" class="btn btn-default" data-toggle="collapse">How do I get tested?</a>
-<div id="8th" class="collapse">
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">
+<a href="#7th" class="btn btn-info" data-toggle="collapse">What is HIV Testing?</a>
+<div id="7th" class="collapse content-center element">
+    HIV testing tells you if you are infected with the Human Immunodeficiency Virus (HIV) that causes AIDS. Most of 
+	these tests look for "antibodies" to HIV. Antibodies are proteins produced by the immune system to fight a specific 
+	germ. Newer HIV tests can also look for signs of the virus itself in the blood.
+</div>
+</div>
+</div>
+</div>
+
+<br></br>
+
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">
+<a href="#8th" class="btn btn-info" data-toggle="collapse">How do I get tested?</a>
+<div id="8th" class="collapse content-center element">
     You can arrange for HIV testing at any Public Health office, or at your doctor's office. Test results are usually available within two weeks.
 
 	The most common HIV test is a blood test. Newer tests can detect HIV antibodies in mouth fluid (not the same as saliva), 
@@ -123,11 +164,17 @@
 	In 2012, the FDA approved the first true "in-home" HIV test. It uses a mouth swab and shows results in 20 to 40 minutes. A positive 
 	result on any HIV test should be confirmed with a second test at a health care facility.
 </div>
+</div>
+</div>
+</div>
 
 <br></br>
 
-<a href="#9th" class="btn btn-default" data-toggle="collapse">When Should I Get Tested?</a>
-<div id="9th" class="collapse">
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">
+<a href="#9th" class="btn btn-info" data-toggle="collapse">When Should I Get Tested?</a>
+<div id="9th" class="collapse content-center element">
     If you are infected with HIV, it usually takes from three weeks to two months for your immune system to produce HIV antibodies. 
 	During this "window period" you can test "negative" for HIV even if you are infected. If you think you were exposed to HIV, you should 
 	wait for two months before being tested. You can also test right away and then again after two or three months. If you are infected, you 
@@ -137,6 +184,8 @@
 	About 5% of people take longer than two months to produce antibodies. Testing at 3 and 6 months after possible exposure will detect almost all 
 	HIV infections. However, there are no guarantees as to when an individual will produce enough antibodies to be detected by an HIV test. If you 
 	have any unexplained symptoms, talk with your health care provider and consider re-testing for HIV.
+</div>
+</div>
 </div>
 </div>
 
