--- a/frontend/js/chat/chat.html
+++ b/frontend/js/chat/chat.html
@@ -8,7 +8,8 @@
             <div class="time">12 seconds ago</div>
         </div>
         <div class="chat" ng-class="{'active': $parent.selected.key == user.key}" ng-click="selectConversation(user)" ng-repeat="user in users | orderBy: '-latest'">
-            {{ user.name == '' ? user.alias : user.name }}
+            <i>Chat with:</i> {{ user.name }} <br/>
+            <div class="time">{{ user.latest }}</div>
         </div>
         <div class="main-action-button">
             <button ng-click="newConversation()" class=" mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
@@ -32,7 +33,8 @@
                             <div ng-if="index > 0 ? (selected.messages[selected.messages.length - index].timestamp.getTime() + 300000) < message.timestamp.getTime() : true" class="timestamp">
                                 {{ message.timestamp | date:"MMMM d h:mm a"}}
                             </div>
-                            <div class="message" ng-class="{ 'sender': message.sender, 'receiver': !message.sender }" ng-bind-html="message.message.string">
+                            <div class="message" ng-class="{ 'sender': message.sender, 'receiver': !message.sender }">
+                                {{ message.message }}
                             </div>
                         </div>
                     </td>
