--- a/frontend/js/learn/learn.html
+++ b/frontend/js/learn/learn.html
@@ -58,10 +58,45 @@
 <div class="row text-center">
 <div class="col-md-offset-4 col-md-4">
 <div class="col-centered">  
+<a href="#rand" class="btn btn-info" data-toggle="collapse">What Does "AIDS" Mean?</a>
+</div>
+<div id="rand" class="collapse content-center element">
+    AIDS stands for Acquired Immune Deficiency Syndrome:
+
+Acquired means you can get infected with it.
+Immune Deficiency means a weakness in the body's system that fights diseases.
+Syndrome means a group of health problems that make up a disease.
+AIDS is caused by a virus called HIV, the Human Immunodeficiency Virus. If you get 
+infected with HIV, your body will try to fight the infection. It will make "antibodies" special molecules to fight HIV.
+</div>
+</div>
+</div>
+
+<br></br>
+
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">  
 <a href="#2nd" class="btn btn-info" data-toggle="collapse">How do you get HIV?</a>
 </div>
 <div id="2nd" class="collapse content-center element">
     You can get HIV through unprotected sex or by sharing needles or other equipment used to inject drugs.
+</div>
+</div>
+</div>
+
+<br></br>
+
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">  
+<a href="#rand" class="btn btn-info" data-toggle="collapse">How Do You Get AIDS?</a>
+</div>
+<div id="rand" class="collapse content-center element">
+You don't actually "get" AIDS. You might get infected with HIV, and later you might 
+develop AIDS. You can get infected with HIV from anyone who's infected, even if they 
+don't look sick and even if they haven't tested HIV-positive yet. The blood, vaginal 
+fluid, semen, and breast milk of people infected with HIV has enough of the virus in it to infect other people.
 </div>
 </div>
 </div>
@@ -104,10 +139,10 @@
 <div class="col-centered">
 <a href="#5th" class="btn btn-info" data-toggle="collapse">How Long Will I Live With HIV?</a>
 <div id="5th" class="collapse content-center element">
-    If you keep your CD4 (type of white blood cell) count up, keep your viral load down, take your HIV meds properly 
-	and live a healthy life, there's no reason to think that your life will be any shorter with HIV than it would have 
-	been without it. The latest information on life expectancy for HIVers shows that HIV-positive people who are on 
-	treatment can expect to live well into their 60s and beyond -- and the estimates keep getting closer to those of 
+    If you keep your white blood cell count up, keep your viral load down, take your HIV meds 
+	and live a healthy life, you can live a normal life. The life expectancy for HIV carriers 
+	shows that HIV-positive people who are on treatment can expect to live well into their 60s 
+	and beyond. These estimates keep getting closer to those of 
 	HIV-negative people as HIV meds become more and more effective.
 </div>
 </div>
@@ -121,14 +156,14 @@
 <div class="col-centered">
 <a href="#6th" class="btn btn-info" data-toggle="collapse">What Should a Person Do After They Test Positive?</a>
 <div id="6th" class="collapse content-center element">
-    If you've already tested positive for HIV, then there are tests a doctor can do to see whether your HIV is progressing, 
-	and whether it's wise to start taking HIV medications.
+    If you're tested positive for HIV, then doctors can test to see whether your HIV is progressing, 
+	and whether to start taking HIV medications.
 
-	For most people, if HIV treatment is not started when their doctor recommends it (i.e., when their CD4 count is low or 
-	their viral load is high), eventually their immune system will weaken to the point that they may develop life-threatening 
+	If HIV treatment is not started when their doctor recommends it (when their CD4 count is low or 
+	their viral load is high), their immune system will weaken to the point that they may develop life-threatening 
 	health problems.
 
-	If you're newly diagnosed, it can also be incredibly beneficial if you seek out support, get help from your local HIV 
+	If you're newly diagnosed, it would be beneficial to seek out support, get help from your local HIV 
 	organization and connect with other HIV-positive people.
 </div>
 </div>
@@ -175,7 +210,7 @@
 <div class="col-centered">
 <a href="#9th" class="btn btn-info" data-toggle="collapse">When Should I Get Tested?</a>
 <div id="9th" class="collapse content-center element">
-    If you are infected with HIV, it usually takes from three weeks to two months for your immune system to produce HIV antibodies. 
+    If you're infected with HIV, it takes from three weeks to two months for your immune system to produce HIV antibodies. 
 	During this "window period" you can test "negative" for HIV even if you are infected. If you think you were exposed to HIV, you should 
 	wait for two months before being tested. You can also test right away and then again after two or three months. If you are infected, you 
 	can transmit HIV to others during the window period even if you test negative. In fact, during this period of early infection, you have the 
@@ -184,6 +219,48 @@
 	About 5% of people take longer than two months to produce antibodies. Testing at 3 and 6 months after possible exposure will detect almost all 
 	HIV infections. However, there are no guarantees as to when an individual will produce enough antibodies to be detected by an HIV test. If you 
 	have any unexplained symptoms, talk with your health care provider and consider re-testing for HIV.
+</div>
+</div>
+</div>
+</div>
+
+<br></br>
+
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">
+<a href="#10th" class="btn btn-info" data-toggle="collapse">What Does It Mean if I Test Positive?</a>
+<div id="10th" class="collapse content-center element">
+     A positive test result means that you have HIV antibodies, and are infected with HIV. This can be a very difficult time.
+	 Testing positive does not mean that you have AIDS. Many people who test positive stay healthy for several years, even if they don't start taking medication right away.
+</div>
+</div>
+</div>
+</div>
+
+<br></br>
+
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">
+<a href="#11th" class="btn btn-info" data-toggle="collapse">Are the Test Results Confidential?</a>
+<div id="11th" class="collapse content-center element">
+     You can be tested anonymously in many places. You do not have to give your name when you are tested at a public health office, or when you receive the test results. 
+	 You can be tested anonymously for HIV as many times as you want.
+</div>
+</div>
+</div>
+</div>
+
+<br></br>
+
+<div class="row text-center">
+<div class="col-md-offset-4 col-md-4">
+<div class="col-centered">
+<a href="#12th" class="btn btn-info" data-toggle="collapse">How Accurate Are the Tests?</a>
+<div id="12th" class="collapse content-center element">
+     Antibody test results for HIV are accurate more than 99.5% of the time. Before you get the results, the test has usually been done two or more times. The first test 
+	 is called an "EIA" or "ELISA" test. Before a positive ELISA test result is reported, it is confirmed by another test called a "Western Blot."
 </div>
 </div>
 </div>
