--- a/frontend/js/learn/learn.html
+++ b/frontend/js/learn/learn.html
@@ -90,9 +90,9 @@ infected with HIV, your body will try to fight the infection. It will make "anti
 <div class="row text-center">
 <div class="col-md-offset-4 col-md-4">
 <div class="col-centered">  
-<a href="#rand" class="btn btn-info" data-toggle="collapse">How Do You Get AIDS?</a>
+<a href="#rand2" class="btn btn-info" data-toggle="collapse">How Do You Get AIDS?</a>
 </div>
-<div id="rand" class="collapse content-center element">
+<div id="rand2" class="collapse content-center element">
 You don't actually "get" AIDS. You might get infected with HIV, and later you might 
 develop AIDS. You can get infected with HIV from anyone who's infected, even if they 
 don't look sick and even if they haven't tested HIV-positive yet. The blood, vaginal 
