--- a/frontend/js/learn/learn.html
+++ b/frontend/js/learn/learn.html
@@ -27,73 +27,10 @@
 <div class="row ">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-centered"> 
-      <a class="btn btn-info" data-toggle="collapse">What is HIV?</a>
-      <div id="1st" class="collapse  section-inner element">
-        HIV is short for "human inmmunodeficiency virus.
-      </div>
-    </div>
-  </div>
-</div>
+      <a class="btn btn-info" data-toggle="collapse">Who can get HIV?</a>
 
-<br></br>
-
-<div class="row ">
-  <div class="col-md-offset-4 col-md-4">
-    <div class="col-centered">  
-      <a class="btn btn-info" data-toggle="collapse">What Does "AIDS" Mean?</a>
-    </div>
-    <div class="collapse  element">
-      AIDS stands for Acquired Immune Deficiency Syndrome:
-
-      Acquired means you can get infected with it.
-      Immune Deficiency means a weakness in the body's system that fights diseases.
-      Syndrome means a group of health problems that make up a disease.
-      AIDS is caused by a virus called HIV, the Human Immunodeficiency Virus. If you get 
-      infected with HIV, your body will try to fight the infection. It will make "antibodies" special molecules to fight HIV.
-    </div>
-  </div>
-</div>
-
-<br></br>
-
-<div class="row ">
-  <div class="col-md-offset-4 col-md-4">
-    <div class="col-centered">  
-      <a class="btn btn-info" data-toggle="collapse">How do you get HIV?</a>
-    </div>
-    <div id="2nd" class="collapse  element">
-      You can get HIV through unprotected sex or by sharing needles or other equipment used to inject drugs.
-    </div>
-  </div>
-</div>
-
-<br></br>
-
-<div class="row ">
-  <div class="col-md-offset-4 col-md-4">
-    <div class="col-centered">  
-      <a class="btn btn-info" data-toggle="collapse">How Do You Get AIDS?</a>
-    </div>
-    <div class="collapse  element">
-      You don't actually "get" AIDS. You might get infected with HIV, and later you might 
-      develop AIDS. You can get infected with HIV from anyone who's infected, even if they 
-      don't look sick and even if they haven't tested HIV-positive yet. The blood, vaginal 
-      fluid, semen, and breast milk of people infected with HIV has enough of the virus in it to infect other people.
-    </div>
-  </div>
-</div>
-
-<br></br>
-
-<div class="row ">
-  <div class="col-md-offset-4 col-md-4">
-    <div class="col-centered"> 
-      <a class="btn btn-info" data-toggle="collapse">Who gets HIV?</a>
-
-      <div id="3rd" class="collapse  section-inner element">
-        Anybody can get HIV. HIV is a virus; once it gets into your body, it can make you sick. 
-        It does so if you are rich or poor; 14 years old or 70; black or white; gay or straight; married or single. 
-        It's what you do, not who you are, that puts you at risk for HIV.
+      <div id="3rd" class="collapse section-inner element">
+        Anyone can contract HIV, regardless of income, gender, or sexual orientation.
       </div>
     </div>
   </div>
@@ -104,12 +41,25 @@
 <div class="row ">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-centered"> 
-      <a class="btn btn-info" data-toggle="collapse">How Long Does It Take to Feel a Symptom of HIV?</a>
+      <a class="btn btn-info" data-toggle="collapse">When do symptoms of HIV start to show?</a>
     </div>
 
-    <div class="collapse  element">
-      People can have HIV for 10 years or more and never show any symptoms. Other people can get symptoms within a 
-      short time after being infected. The only way you can tell if you have HIV is to get an HIV test.
+    <div class="collapse element">
+      Symptoms can appear after as short as a few weeks or as long as 10 years.
+    </div>
+  </div>
+</div>
+
+<br></br>
+
+<div class="row ">
+  <div class="col-md-offset-4 col-md-4">
+    <div class="col-centered"> 
+      <a class="btn btn-info" data-toggle="collapse">How can I tell if I have HIV?</a>
+    </div>
+
+    <div class="collapse element">
+      The only way to know if you have contracted HIV is to get an HIV test in the clinic.
     </div>
   </div>
 </div>
@@ -119,13 +69,9 @@
 <div class="row ">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-centered">
-      <a class="btn btn-info" data-toggle="collapse">How Long Will I Live With HIV?</a>
+      <a class="btn btn-info" data-toggle="collapse">How Long Can I Expect To Live With HIV?</a>
       <div class="collapse  element">
-        If you keep your white blood cell count up, keep your viral load down, take your HIV meds 
-        and live a healthy life, you can live a normal life. The life expectancy for HIV carriers 
-        shows that HIV-positive people who are on treatment can expect to live well into their 60s 
-        and beyond. These estimates keep getting closer to those of 
-        HIV-negative people as HIV meds become more and more effective.
+        If you take your medications regularly and live a healthy lifestyle, then your life expectancy is almost normal.
       </div>
     </div>
   </div>
@@ -136,17 +82,11 @@
 <div class="row ">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-centered">
-      <a class="btn btn-info" data-toggle="collapse">What Should a Person Do After They Test Positive?</a>
-      <div class="collapse  element">
-        If you're tested positive for HIV, then doctors can test to see whether your HIV is progressing, 
-        and whether to start taking HIV medications.
+      <a class="btn btn-info" data-toggle="collapse">What should I do after testing positive for HIV?</a>
+      <div class="collapse element">
+      If possible, you should consult with a doctor immediately in order to determine the progression of the virus and whether you should begin taking HIV medications.
 
-        If HIV treatment is not started when their doctor recommends it (when their CD4 count is low or 
-        their viral load is high), their immune system will weaken to the point that they may develop life-threatening 
-        health problems.
-
-        If you're newly diagnosed, it would be beneficial to seek out support, get help from your local HIV 
-        organization and connect with other HIV-positive people.
+      You may wish to join an HIV/AIDS support group and get more information from your local HIV organization.
       </div>
     </div>
   </div>
@@ -157,11 +97,9 @@
 <div class="row ">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-centered">
-      <a class="btn btn-info" data-toggle="collapse">What is HIV Testing?</a>
+      <a class="btn btn-info" data-toggle="collapse">How does HIV testing work?</a>
       <div class="collapse  element">
-        HIV testing tells you if you are infected with the Human Immunodeficiency Virus (HIV) that causes AIDS. Most of 
-        these tests look for "antibodies" to HIV. Antibodies are proteins produced by the immune system to fight a specific 
-        germ. Newer HIV tests can also look for signs of the virus itself in the blood.
+        Common HIV tests look for signs of the virus in your blood or check your oral fluids for low levels of antibodies.
       </div>
     </div>
   </div>
@@ -169,12 +107,12 @@
 
 <br></br>
 
-<div class="row ">
+<!-- <div class="row ">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-centered">
-      <a class="btn btn-info" data-toggle="collapse">How do I get tested?</a>
+      <a class="btn btn-info" data-toggle="collapse">Where can I get tested?</a>
       <div class="collapse  element">
-        You can arrange for HIV testing at any Public Health office, or at your doctor's office. Test results are usually available within two weeks.
+        HIV tests are provided at any Public Health office, or at your doctor's office. Test results are usually available within two weeks.
 
         The most common HIV test is a blood test. Newer tests can detect HIV antibodies in mouth fluid (not the same as saliva), 
         a scraping from inside the cheek, or urine. "Rapid" HIV test results are available within 10 to 30 minutes after a sample is taken. 
@@ -185,22 +123,14 @@
   </div>
 </div>
 
-<br></br>
+<br></br> -->
 
 <div class="row ">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-centered">
-      <a class="btn btn-info" data-toggle="collapse">When Should I Get Tested?</a>
+      <a class="btn btn-info" data-toggle="collapse">When should I get tested for HIV?</a>
       <div class="collapse  element">
-        If you're infected with HIV, it takes from three weeks to two months for your immune system to produce HIV antibodies. 
-        During this "window period" you can test "negative" for HIV even if you are infected. If you think you were exposed to HIV, you should 
-        wait for two months before being tested. You can also test right away and then again after two or three months. If you are infected, you 
-        can transmit HIV to others during the window period even if you test negative. In fact, during this period of early infection, you have the 
-        greatest chance of passing HIV infection to others.
-
-        About 5% of people take longer than two months to produce antibodies. Testing at 3 and 6 months after possible exposure will detect almost all 
-        HIV infections. However, there are no guarantees as to when an individual will produce enough antibodies to be detected by an HIV test. If you 
-        have any unexplained symptoms, talk with your health care provider and consider re-testing for HIV.
+        If you think you were exposed to HIV, you should wait for two months before being tested, since you might test "negative" for HIV for up to two months after contracting the virus.
       </div>
     </div>
   </div>
@@ -211,10 +141,10 @@
 <div class="row ">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-centered">
-      <a class="btn btn-info" data-toggle="collapse">What Does It Mean if I Test Positive?</a>
+      <a class="btn btn-info" data-toggle="collapse">What does a positive test result mean?</a>
       <div class="collapse  element">
-        A positive test result means that you have HIV antibodies, and are infected with HIV. This can be a very difficult time.
-        Testing positive does not mean that you have AIDS. Many people who test positive stay healthy for several years, even if they don't start taking medication right away.
+        A positive test result means that you are infected with the HIV virus; testing positive does NOT necessarily mean that you have AIDS.
+        Many people who test positive stay healthy for several years, even if they don't start taking medication right away.
       </div>
     </div>
   </div>
@@ -222,7 +152,7 @@
 
 <br></br>
 
-<div class="row ">
+<!-- <div class="row ">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-centered">
       <a class="btn btn-info" data-toggle="collapse">Are the Test Results Confidential?</a>
@@ -234,15 +164,53 @@
   </div>
 </div>
 
+<br></br> -->
+
+<div class="row ">
+  <div class="col-md-offset-4 col-md-4">
+    <div class="col-centered">
+      <a class="btn btn-info" data-toggle="collapse">How accurate are the tests?</a>
+      <div id="12th" class="collapse  element">
+        The HIV test is 99.5% accurate.
+      </div>
+    </div>
+  </div>
+</div>
+
 <br></br>
 
 <div class="row ">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-centered">
-      <a class="btn btn-info" data-toggle="collapse">How Accurate Are the Tests?</a>
+      <a class="btn btn-info" data-toggle="collapse">Is it okay to miss a dose of medication?</a>
       <div id="12th" class="collapse  element">
-        Antibody test results for HIV are accurate more than 99.5% of the time. Before you get the results, the test has usually been done two or more times. The first test 
-	is called an "EIA" or "ELISA" test. Before a positive ELISA test result is reported, it is confirmed by another test called a "Western Blot."
+        It is strongly recommended that you take your HIV medication regularly. If you have been on HIV medication for a long time, however, and the virus is completely suppressed in your body, then it typically takes 7-10 days for the virus to rebound. Is is especially important to take your medication regularly at the start of your treatment, before the virus has been suppressed.
+      </div>
+    </div>
+  </div>
+</div>
+
+<br></br>
+
+<div class="row ">
+  <div class="col-md-offset-4 col-md-4">
+    <div class="col-centered">
+      <a class="btn btn-info" data-toggle="collapse">Do I need to take my medication at the same time each day?</a>
+      <div id="12th" class="collapse  element">
+        It is recommended that you take your HIV medication around the same time each day, but it is much more important that you take the medication every day
+      </div>
+    </div>
+  </div>
+</div>
+
+<br></br>
+
+<div class="row ">
+  <div class="col-md-offset-4 col-md-4">
+    <div class="col-centered">
+      <a class="btn btn-info" data-toggle="collapse">Does HIV/medication cause infertility?</a>
+      <div id="12th" class="collapse  element">
+        There may be a slight incease in infertility rates among HIV-positive women on medications, but the vast majority of women of childbearing age can still become pregnant.
       </div>
     </div>
   </div>
