--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,6 +35,13 @@
               Register
             </a>
           </span>
+          <span class="mdl-layout-title"
+                ng-if="!!Session.user.id">
+            <a class="mdl-button"
+                  href="#/profile">
+              Profile
+            </a>
+          </span>
         </div>
         <!-- Tabs -->
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
