--- a/frontend/js/community/comment-modal.html
+++ b/frontend/js/community/comment-modal.html
@@ -2,6 +2,7 @@
   <div class="full-width">
     <span class="plus-spread modal-title">
       <h5 style="max-width: 90%">{{post.title}}</h5>
+      <p>{{post.content}}</p>
       <i class="material-icons action"
          ng-click="$dismiss()">close</i>
     </span>
