--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
-    <title>~+^!^+~</title>
+    <title>Plus+</title>
     <meta name="description" content="Plus!">
 
     <link rel="stylesheet" href="style/vendor/material.min.css">
